--- a/blender/PKGBUILD
+++ b/blender/PKGBUILD
@@ -20,7 +20,7 @@ _gittag=v2.90.0
 pkgname=blender
 pkgver=2.90.0
 [[ -n $_gitcommit ]] && pkgver=${pkgver}.git1.${_gitcommit:0:8}
-pkgrel=1
+pkgrel=2
 epoch=17
 pkgdesc="A fully integrated 3D graphics creation suite"
 arch=('x86_64')
@@ -63,7 +63,11 @@ prepare() {
   git config submodule."release/scripts/addons_contrib".url "${srcdir}/blender-addons-contrib"
   git config submodule."release/datafiles/locale".url "${srcdir}/blender-translations"
   git config submodule."source/tools".url "${srcdir}/blender-dev-tools"
-  git submodule update
+  git config submodule."release/scripts/addons".tag "${_gittag}"
+  git config submodule."release/scripts/addons_contrib".tag "${_gittag}"
+  git config submodule."release/datafiles/locale".tag "${_gittag}"
+  git config submodule."source/tools".tag "${_gittag}"
+  git submodule update --remote 
 
   patch -Np1 -i "$srcdir"/91aeb452ab251b307311fe869e8e14df945ec6bc
   patch -Np1 -i "$srcdir"/cuda11.patch
